@@ -36,103 +36,6 @@ if (!(GALLERY_ADMIN_MODE || USER_ADMIN_MODE)) {
 $icon_array = array();
 $icon_array['ok'] = cpg_fetch_icon('ok', 0);
 
-function get_album_data()
-{
-    global $CONFIG, $ALBUM_LIST;
-
-    $result = cpg_db_query("SELECT aid, title FROM {$CONFIG['TABLE_ALBUMS']} ORDER BY title");
-    if (mysql_num_rows($result) > 0) {
-        $rowset = cpg_db_fetch_rowset($result);
-        foreach ($rowset as $alb) {
-            $ALBUM_LIST[]=array($alb['aid'], $alb['title']);
-        }
-    }
-}
-
-function albumselect($id = "album")
-{
-    global $CONFIG, $aid, $cpg_udb, $CPG_PHP_SELF, $lang_picmgr_php, $lang_common, $lang_errors, $LINEBREAK;
-    static $select = "";
-
-    // Reset counter
-    $list_count = 0;
-
-    if ($select == "") {
-        // albums in root category
-        if (GALLERY_ADMIN_MODE) {
-            $result = cpg_db_query("SELECT aid, title FROM {$CONFIG['TABLE_ALBUMS']} WHERE category = 0");
-            while ($row = mysql_fetch_array($result)) {
-                // Add to multi-dim array for later sorting
-                $listArray[$list_count]['cat'] = $lang_common['albums_no_category'];
-                $listArray[$list_count]['aid'] = $row['aid'];
-                $listArray[$list_count]['title'] = $row['title'];
-                $listArray[$list_count]['cid'] = 0;
-                $list_count++;
-            }
-            mysql_free_result($result);
-        }
-
-        // albums in public categories
-        if (GALLERY_ADMIN_MODE) {
-            $result = cpg_db_query("SELECT DISTINCT a.aid AS aid, a.title AS title, c.name AS cname, c.cid AS cid FROM {$CONFIG['TABLE_ALBUMS']} AS a, {$CONFIG['TABLE_CATEGORIES']} AS c WHERE a.category = c.cid AND a.category < '" . FIRST_USER_CAT . "'");
-            while ($row = mysql_fetch_array($result)) {
-                // Add to multi-dim array for later sorting
-                $listArray[$list_count]['cat'] = $row['cname'];
-                $listArray[$list_count]['aid'] = $row['aid'];
-                $listArray[$list_count]['title'] = $row['title'];
-                $listArray[$list_count]['cid'] = $row['cid'];
-                $list_count++;
-            }
-            mysql_free_result($result);
-        }
-
-        // Get albums in users' personal galleries
-
-        if (GALLERY_ADMIN_MODE) {
-            $sql = $cpg_udb->get_admin_album_list();  
-        } else {
-            $sql = "SELECT aid, title AS title FROM {$CONFIG['TABLE_ALBUMS']}  WHERE category = " . (FIRST_USER_CAT + USER_ID);
-        }
-        $result = cpg_db_query($sql);
-        while ($row = mysql_fetch_array($result)) {
-            // Add to multi-dim array for later sorting
-            $listArray[$list_count]['cat'] = $lang_common['personal_albums'];
-            $listArray[$list_count]['aid'] = $row['aid'];
-            $listArray[$list_count]['title'] = $row['title'];
-            $listArray[$list_count]['cid'] = -1;
-            $list_count++;
-        }
-        mysql_free_result($result);
-
-        if (!$aid) {
-            $select = '<option value="0">' . $lang_picmgr_php['no_album'] . '</option>' . $LINEBREAK;
-        }
-
-        // Sort the pulldown options by category and album name
-        $listArray = array_csort($listArray,'cat','title');
-
-        // Create the nicely sorted and formatted drop down list
-        // $alb_cat = '';
-        $alb_cid = '';
-        foreach ($listArray as $val) {
-            if ($val['cid'] !== $alb_cid) {
-                if ($alb_cid) {
-                    $select .= '</optgroup>' . $LINEBREAK;
-                }
-                $select .= '<optgroup label="' . $val['cat'] . '">' . $LINEBREAK;
-                $alb_cid = $val['cid'];
-            }
-            $select .= '<option value="' . $val['aid'] . '"' . ($val['aid'] == $aid ? ' selected="selected"' : '') . '>   ' . $val['title'] . '</option>' . $LINEBREAK;
-        }
-        if ($alb_cid) {
-            $select .= '</optgroup>' . $LINEBREAK;
-        }
-    }
-
-    return $LINEBREAK . '<select name="'.$id.'" class="listbox">' . $LINEBREAK . $select . '</select>' . $LINEBREAK;
-}
-
-
 // set js variable to changes albums
 set_js_var('change_album', $lang_picmgr_php['change_album']);
 set_js_var('confirm_modifs', $lang_picmgr_php['confirm_modifs']);
@@ -150,7 +53,7 @@ print <<<EOT
     <noscript>
         <tr>
             <td colspan="2" class="tableh2">
-            {$lang_common['javascript_needed']}
+                {$lang_common['javascript_needed']}
             </td>
         </tr>
     </noscript>
@@ -185,19 +88,17 @@ print <<<EOT
        <table class="head_album" border="0" cellspacing="0" cellpadding="0">
 EOT;
 
-//Joe Ernst - Added USER_ADMIN_MODE
 if (GALLERY_ADMIN_MODE || USER_ADMIN_MODE) {
-    $ALBUM_LIST = array();
-    $ALBUM_LIST[] = array(0, $lang_picmgr_php['no_album']);
-    get_album_data(FIRST_USER_CAT + USER_ID,'');
 
+    $options = album_selection_options($aid);
+    
     echo <<<EOT
       <tr class="head-album">
          <td>
-            <strong>{$lang_common['select_album']}</strong>
-EOT;
-        print albumselect('aid');
-    echo <<<EOT
+            <select name="aid" class="listbox">
+                <option value="0">{$lang_common['select_album']}</option>
+                $options
+            </select>
          </td>
       </tr>
     </table>
